Closed Bug 176595 Opened 23 years ago Closed 23 years ago

crash caused by wrong parent deleting the next in flow child

Categories

(Core :: Layout, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.2final

People

(Reporter: alexsavulov, Assigned: smontagu)

Details

(Keywords: regression, topcrash)

Attachments

(2 files)

this already has a patch. is a regression caused by the fix for bug 163614 that was handled in bug 152755 but we need to keep that one open for the initial issue. i will move the patch and the testcase.
this patch is the same like http://bugzilla.mozilla.org/attachment.cgi?id=103895&action=view i will move the r=/sr= too.
Comment on attachment 104047 [details] [diff] [review] patch by S.Montagu moving reviews from http://bugzilla.mozilla.org/attachment.cgi?id=103895&action=view r=alexsavulov sr=dbaron
Attachment #104047 - Flags: superreview+
Attachment #104047 - Flags: review+
Keywords: regression, topcrash
Priority: -- → P2
Target Milestone: --- → mozilla1.2final
Attached file zipped testcase
Comment on attachment 104047 [details] [diff] [review] patch by S.Montagu a=dbaron for trunk checkin
Attachment #104047 - Flags: approval+
QA Contact: gerardok → moied
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified Fix checked in cvs (ver 1.37)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: