Bug 176595: crash caused by wrong parent deleting the next in flow child. r=alexsavulov, sr=dbaron, a=dbaron.